<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.Holo.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>


    <TableRow android:padding="35dp">
        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/unisansheavy"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#FFffff"
            android:textSize="35sp"
            android:text="@string/judul" />
    </TableRow>

    <TableRow
        android:paddingTop="5dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:paddingBottom="25dp">

        <Spinner
            android:id="@+id/spinner"
            android:background="#ffffff"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/Provinsi_arrays"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:fontFamily="@font/unisansheavy"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_refresh"
            android:textColor="#ffffff"
            android:text="@string/submit" />

    </TableRow>

    <TableRow android:padding="20dp">

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/provinsi"
            android:gravity="left"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/titik_dua"
            android:gravity="center"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:id="@+id/tv_provinsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="right"
            android:textStyle="bold"
            android:textColor="#FFffff"
            android:textSize="20sp"
            />

    </TableRow>

    <TableRow android:padding="20dp">

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/positif"
            android:gravity="left"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/titik_dua"
            android:gravity="center"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:id="@+id/tv_positif"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="right"
            android:textStyle="bold"
            android:textColor="#FFffff"
            android:textSize="20sp"
            />

    </TableRow>

    <TableRow android:padding="20dp">

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sembuh"
            android:gravity="left"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/titik_dua"
            android:gravity="center"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:id="@+id/tv_sembuh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="right"
            android:textStyle="bold"
            android:textColor="#FFffff"
            android:textSize="20sp"
            />

    </TableRow>

    <TableRow android:padding="20dp">

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/meninggal"
            android:gravity="left"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/titik_dua"
            android:gravity="center"
            android:textColor="#FFffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:fontFamily="@font/unisansheavy"
            android:id="@+id/tv_meniggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:gravity="right"
            android:textStyle="bold"
            android:textColor="#FFffff"
            android:textSize="20sp"
            />

    </TableRow>

    <TableRow android:padding="10dp" android:layout_marginTop="15dp" android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_refresh"
            android:layout_height="50dp"
            android:background="@drawable/btn_refresh"
            android:layout_width="wrap_content"
            android:text="@string/refresh"
            android:textColor="#ffffff"
            android:layout_marginHorizontal="100dp"
            android:textStyle="bold"
            android:fontFamily="@font/unisansheavy"
            >

        </androidx.appcompat.widget.AppCompatButton>


    </TableRow>

    <TableRow android:padding="8dp" android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_height="50dp"
            android:background="@drawable/btn_refresh"
            android:layout_width="wrap_content"
            android:text="@string/kembali"
            android:textColor="#ffffff"
            android:layout_marginHorizontal="100dp"
            android:textStyle="bold"
            android:fontFamily="@font/unisansheavy"
            >

        </androidx.appcompat.widget.AppCompatButton>


    </TableRow>

    <TextView
        android:fontFamily="@font/unisansheavy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/author"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FFffff"
        android:textSize="12sp"
        />

</TableLayout>